--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "heroku-prebuild": "yarn install --production=false",
+    "heroku-postbuild": "yarn install --production=true"
   },
   "keywords": [],
   "author": "",
