--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
-  }
+  },
+  "engines": {
+    "node": "14.x",
+    "yarn": "1.x"
+  }  
 }
